welcome.lessons.welcome.array.island.Island.scala.error
island: error: not found: value island
   t.setResult( island( t.getParameter(0).asInstanceOf[Array[Int]]) )
                ^island:3: error: type mismatch;
 found   : Array[Int]
 required: Int
	var k:Int = Array(0)
                         ^island:5: error: type mismatch;
 found   : Array[Int]
 required: Int
	var f : Int = Array(1)
                           ^island:6: error: value length is not a member of object Array
	for (i<-0 to Array.length-1) {
                           ^